Re-correction bug clear des points pas effectué...

--- a/src/static/rpi-notification.html
+++ b/src/static/rpi-notification.html
@@ -56,7 +56,7 @@
                 function clear_notification() {
                     $('#team_name').text('');
                     $('#message').text('');
-                    $('#points').text(points);
+                    $('#points').text('');
 
                     $('#container').removeClass();
                 }
