--- a/src/static/rpi-notification.html
+++ b/src/static/rpi-notification.html
@@ -43,7 +43,7 @@
 
         <script type="text/javascript">
             $(function() {
-                var polling_url = 'http://127.0.0.1:5001/rpi-notification/';
+                var polling_url = '/rpi-notification/';
 
                 function display_notification(team, message, score, has_won) {
                     $('#container').addClass(has_won ? 'won' : 'lost');
