--- a/src/static/photos.html
+++ b/src/static/photos.html
@@ -48,7 +48,7 @@
                         tr = $('<tr/>');
                         tr.append("<td>" + data[i].picture_uuid + "</td>");
                         div = $("<p></p>");
-                        div.append("<h3>Image " + data[i].picture_uuid + "</h3>")
+                        div.append("<h3>Labels of image " + data[i].picture_uuid + "</h3>")
                         div.append("<table id=\"tab" + i + "\">");
                         //var tr2;
                         for (var j = 0; j < data[i].labels.length; j++) {
@@ -62,7 +62,6 @@
                         div.append("<br>");
                         $('#diva').append(div);
                         //tr.append("<td><a href=\"photos.html?uuid=" + data[i].uuid + "\">photos</a></td>");
-                        tr.append("<tr><td>ok</td><td>ok</td></tr>");
                         tr.append("<td>" + data[i].position['lat'] + "</td>");
                         if (data[i].winning_label == null) {
                             tr.append("<td>Photo not match</td>");
@@ -84,7 +83,6 @@
     <table id="tabBase">
         <tr>
             <th>Picture uuid</th>
-            <th>Labels</th>
             <th>position</th>
             <th>winning_label</th>
 
