--- a/src/static/rpi-notification.html
+++ b/src/static/rpi-notification.html
@@ -19,31 +19,52 @@
                 text-align: center;
             }
 
-            #container {
+            #alert_container {
                 position: fixed;
                 top: 33%;
 
                 width: 100%;
                 height: auto;
+
+                background-color: #e89c38;
             }
 
-            #container.won {
+            div.notification_line {
+                position: relative;
+
+                width: 100%;
+                height: 0px;
+
+                opacity: 0;
+
+                border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+            }
+
+            div.notification_line.won {
                 background-color: #6ab04f;
             }
 
-            #container.lost {
+            div.notification_line.lost {
                 background-color: #d4565b;
+            }
+
+            div.notification_line h2, div.notification_line h3, div.notification_line h4 {
+                margin: 0;
+                padding: 0;
             }
         </style>
     </head>
     <body>
         <link href="libraries/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
 
-        <div id="container">
-            <h1 id="team_name">Connexion en cours</h1>
-            <h2 id="message">Veuillez patienter...</h2>
-            <h2 id="score"></h2>
+        <div id="alert_container">
+            <h2>Connexion en cours</h2>
+            <h3>Veuillez patienter...</h3>
         </div>
+
+        <section id="notification_container">
+
+        </section>
 
         <script src="libraries/jquery/js/jquery-3.2.1.min.js"></script>
         <script src="libraries/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
@@ -52,19 +73,23 @@
                 var polling_url = 'http://127.0.0.1:5001/rpi-notification/';
 
                 function display_notification(team, message, score, has_won) {
-                    $('#container').addClass(has_won ? 'won' : 'lost');
-
-                    $('#team_name').text(team);
-                    $('#message').text(message);
-                    $('#score').text(score);
-                }
-
-                function clear_notification() {
-                    $('#team_name').text('');
-                    $('#message').text('');
-                    $('#score').text('');
-
-                    $('#container').removeClass();
+                    $('#notification_container').prepend(
+                        $('<div/>')
+                            .addClass('notification_line').addClass(has_won ? 'won' : 'lost')
+                            .animate({'height': '160px', 'opacity': 1}, 650, function() {
+                                var that = this;
+                                setTimeout(function() {
+                                    console.log(this);
+                                    $(that).animate({'opacity': 0.5}, 400);
+                                }, 2000);
+                            })
+                            .append('<br/>')
+                            .append($('<h2/>').text('Équipe : ' + team))
+                            .append('<br/>')
+                            .append($('<h3/>').text(message))
+                            .append('<br/>')
+                            .append($('<h4/>').text('Points : ' + score))
+                    );
                 }
 
                 function pop_polling() {
@@ -92,10 +117,11 @@
                         url: polling_url,
                         method: 'GET',
                         success: function(data) {
+                            $('#alert_container').addClass('hidden');
+
                             console.log(data);
 
                             if (data.length === 0) {
-                                clear_notification();
                                 setTimeout(do_polling, 500);
                                 return;
                             }
@@ -110,7 +136,6 @@
                             while (pop_polling() !== true);
 
                             setTimeout(function() {
-                                clear_notification();
                                 setTimeout(do_polling, 500);
                             }, 2500);
                         },
