Correction mauvaise URL

--- a/src/static/rpi-notification.html
+++ b/src/static/rpi-notification.html
@@ -70,7 +70,7 @@
         <script src="libraries/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
         <script type="text/javascript">
             $(function() {
-                var polling_url = 'http://127.0.0.1:5001/rpi-notification/';
+                var polling_url = '/rpi-notification/';
 
                 function display_notification(team, message, score, has_won) {
                     $('#notification_container').prepend(
